Turn off layer heading.

--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -6,10 +6,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # New options /w e-paper improvements:
 CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
-#CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=N #seconds
+#CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300 #seconds
 #CONFIG_IL0323_INVERT=y # WoB or BoW
 
-#CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
-#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_ZMK=y for ZMK logo instead of Zen
-#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_LPKB=y for LowProKB logo
-#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_MIRYOKU=y for Miryoku logo
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
+#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_ZMK=y
+#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_LPKB=y
+#CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_MIRYOKU=y
