--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -7,7 +7,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 # New options /w e-paper improvements:
 CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
 CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=300
-#CONFIG_IL0323_INVERT=y # WoB or BoW
+CONFIG_IL0323_INVERT=y # WoB or BoW
 
 CONFIG_CUSTOM_WIDGET_LAYER_STATUS_HIDE_HEADING=y
 #CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_ZMK=y
